escape the "D1" revisions, as mandoc thinks this is a macro call;

--- a/share/man/man4/urtwn.4
+++ b/share/man/man4/urtwn.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: urtwn.4,v 1.54 2023/04/28 01:24:14 kevlo Exp $
+.\" $OpenBSD: urtwn.4,v 1.55 2023/04/28 06:21:42 jmc Exp $
 .\"
 .\" Copyright (c) 2010 Damien Bergamini <damien.bergamini@free.fr>
 .\"
@@ -108,8 +108,8 @@ The following adapters should work:
 .It Belkin F7D1102 Surf Wireless Micro
 .It Comfast CF-WU710N v4
 .It D-Link DWA-121
-.It D-Link DWA-123 rev D1
-.It D-Link DWA-125 rev D1
+.It D-Link DWA-123 rev \&D1
+.It D-Link DWA-125 rev \&D1
 .It D-Link DWA-131 rev B, E1
 .It D-Link DWA-133
 .It D-Link DWA-135
