--- a/usr.bin/mg/mg.1
+++ b/usr.bin/mg/mg.1
@@ -1,7 +1,7 @@
-.\"	$OpenBSD: mg.1,v 1.132 2023/04/25 13:32:20 op Exp $
+.\"	$OpenBSD: mg.1,v 1.133 2023/04/28 09:50:50 op Exp $
 .\" This file is in the public domain.
 .\"
-.Dd $Mdocdate: April 25 2023 $
+.Dd $Mdocdate: April 28 2023 $
 .Dt MG 1
 .Os
 .Sh NAME
@@ -103,15 +103,20 @@ Backup files have a
 character appended to the file name and
 are created in the current working directory by default.
 Whether to create backup files or not can be toggled with the
-make-backup-files command.
+.Ic make-backup-files
+command.
 The backup file location can either be in the current
 working directory, or all backups can be moved to a
 .Pa ~/.mg.d
 directory where files retain their path name to retain uniqueness.
-Use the backup-to-home-directory to alternate between these two locations.
+Use the
+.Ic backup-to-home-directory
+command to alternate between these two locations.
 Further, if any application creates backup files in
 .Pa /tmp ,
-these can be left with the leave-tmpdir-backups command.
+these can be left with the
+.Ic leave-tmpdir-backups
+command.
 .Sh TAGS
 .Nm
 supports tag files created by
@@ -380,294 +385,314 @@ If a positive parameter is supplied, the mode is forced to on.
 Otherwise, it is forced to off.
 .\"
 .Bl -tag -width xxxxx
-.It apropos
+.It Ic apropos
 Help Apropos.
 Prompt the user for a string, open the *help* buffer,
 and list all
 .Nm
 commands that contain that string.
-.It audible-bell
+.It Ic audible-bell
 Toggle the audible system bell.
-.It auto-execute
+.It Ic auto-execute
 Register an auto-execute hook; that is, specify a filename pattern
 (conforming to the shell's filename globbing rules) and an associated
 function to execute when a file matching the specified pattern
 is read into a buffer.
-.It auto-fill-mode
+.It Ic auto-fill-mode
 Toggle auto-fill mode (sometimes called mail-mode) in the current buffer,
 where text inserted past the fill column is automatically wrapped
 to a new line.
-Can be set globally with set-default-mode.
-.It auto-indent-mode
+Can be set globally with
+.Ic set-default-mode .
+.It Ic auto-indent-mode
 Toggle indent mode in the current buffer,
 where indentation is preserved after a newline.
-Can be set globally with set-default-mode.
-.It back-to-indentation
+Can be set globally with
+.Ic set-default-mode .
+.It Ic back-to-indentation
 Move the dot to the first non-whitespace character on the current line.
-.It backup-to-home-directory
+.It Ic backup-to-home-directory
 Save backup copies to a
 .Pa ~/.mg.d
 directory instead of working directory.
-Requires make-backup-files to be on.
-.It backward-char
+Requires
+.Ic make-backup-files
+to be on.
+.It Ic backward-char
 Move cursor backwards one character.
-.It backward-kill-word
+.It Ic backward-kill-word
 Kill text backwards by
 .Va n
 words.
-.It backward-paragraph
+.It Ic backward-paragraph
 Move cursor backwards
 .Va n
 paragraphs.
 Paragraphs are delimited by <NL><NL> or <NL><TAB> or <NL><SPACE>.
-.It backward-word
+.It Ic backward-word
 Move cursor backwards by the specified number of words.
-.It beginning-of-buffer
+.It Ic beginning-of-buffer
 Move cursor to the top of the buffer.
 If set, keep mark's position, otherwise set at current position.
 A numeric argument
 .Va n
 will move n/10th of the way from the top.
-.It beginning-of-line
+.It Ic beginning-of-line
 Move cursor to the beginning of the line.
-.It blink-and-insert
+.It Ic blink-and-insert
 Self-insert a character, then search backwards and blink its
 matching delimiter.
 For delimiters other than
 parenthesis, brackets, and braces, the character itself
 is used as its own match.
-Can be used in the startup file with the global-set-key command.
-.It bsmap-mode
+Can be used in the startup file with the
+.Ic global-set-key
+command.
+.It Ic bsmap-mode
 Toggle bsmap mode, where DEL and C-h are swapped.
-.It c-mode
+.It Ic c-mode
 Toggle a KNF-compliant mode for editing C program files.
-.It call-last-kbd-macro
+.It Ic call-last-kbd-macro
 Invoke the keyboard macro.
-.It capitalize-word
+.It Ic capitalize-word
 Capitalize
 .Va n
 words; i.e. convert the first character of the word to
 upper case, and subsequent letters to lower case.
-.It cd
+.It Ic cd
 Change the global working directory.
-See also global-wd-mode.
-.It column-number-mode
+See also
+.Ic global-wd-mode .
+.It Ic column-number-mode
 Toggle whether the column number is displayed in the modeline.
-.It copy-region-as-kill
+.It Ic copy-region-as-kill
 Copy all of the characters in the region to the kill buffer,
 clearing the mark afterwards.
-This is a bit like a kill-region followed by a yank.
-.It count-matches
+This is a bit like a
+.Ic kill-region
+followed by a
+.Ic yank .
+.It Ic count-matches
 Count the number of lines matching the supplied regular expression.
-.It count-non-matches
+.It Ic count-non-matches
 Count the number of lines not matching the supplied regular expression.
-.It cscope-find-this-symbol
+.It Ic cscope-find-this-symbol
 List the matches for the given symbol.
-.It cscope-find-global-definition
+.It Ic cscope-find-global-definition
 List global definitions for the given literal.
-.It cscope-find-called-functions
+.It Ic cscope-find-called-functions
 List functions called from the given function.
-.It cscope-find-functions-calling-this-function
+.It Ic cscope-find-functions-calling-this-function
 List functions calling the given function.
-.It cscope-find-this-text-string
+.It Ic cscope-find-this-text-string
 List locations matching the given text string.
-.It cscope-find-egrep-pattern
+.It Ic cscope-find-egrep-pattern
 List locations matching the given extended regular expression pattern.
-.It cscope-find-this-file
+.It Ic cscope-find-this-file
 List filenames matching the given filename.
-.It cscope-find-files-including-file
+.It Ic cscope-find-files-including-file
 List files that #include the given filename.
-.It cscope-next-symbol
+.It Ic cscope-next-symbol
 Navigate to the next match.
-.It cscope-prev-symbol
+.It Ic cscope-prev-symbol
 Navigate to the previous match.
-.It cscope-next-file
+.It Ic cscope-next-file
 Navigate to the next file.
-.It cscope-prev-file
+.It Ic cscope-prev-file
 Navigate to the previous file.
-.It cscope-create-list-of-files-to-index
+.It Ic cscope-create-list-of-files-to-index
 Create cscope's List and Index in the given directory.
-.It define-key
+.It Ic define-key
 Prompts the user for a named keymap (mode),
 a key, and an
 .Nm
 command, then creates a keybinding in the appropriate
 map.
-.It delete-backward-char
+.It Ic delete-backward-char
 Delete backwards
 .Va n
 characters.
-Like delete-char, this actually does a kill if presented
+Like
+.Ic delete-char ,
+this actually does a kill if presented
 with an argument.
-.It delete-blank-lines
+.It Ic delete-blank-lines
 Delete blank lines around dot.
 If dot is sitting on a blank line, this command
 deletes all the blank lines above and below the current line.
 Otherwise, it deletes all of the blank lines after the current line.
-.It delete-char
+.It Ic delete-char
 Delete
 .Va n
 characters forward.
 If any argument is present, it kills rather than deletes,
 saving the result in the kill buffer.
-.It delete-horizontal-space
+.It Ic delete-horizontal-space
 Delete any whitespace around the dot.
-.It delete-leading-space
+.It Ic delete-leading-space
 Delete leading whitespace on the current line.
-.It delete-trailing-space
+.It Ic delete-trailing-space
 Delete trailing whitespace on the current line.
-.It delete-matching-lines
+.It Ic delete-matching-lines
 Delete all lines after dot that contain a string matching
 the supplied regular expression.
-.It delete-non-matching-lines
+.It Ic delete-non-matching-lines
 Delete all lines after dot that don't contain a string matching
 the supplied regular expression.
-.It delete-other-windows
+.It Ic delete-other-windows
 Make the current window the only window visible on the screen.
-.It delete-window
+.It Ic delete-window
 Delete current window.
-.It describe-bindings
+.It Ic describe-bindings
 List all global and local keybindings, putting the result in
 the *help* buffer.
-.It describe-key-briefly
+.It Ic describe-key-briefly
 Read a key from the keyboard, and look it up in the keymap.
 Display the name of the function currently bound to the key.
-.It diff-buffer-with-file
+.It Ic diff-buffer-with-file
 View the differences between buffer and its associated file.
-.It digit-argument
+.It Ic digit-argument
 Process a numerical argument for keyboard-invoked functions.
-.It dired-jump
+.It Ic dired-jump
 Open a dired buffer containing the current buffer's directory location.
-.It downcase-region
+.It Ic downcase-region
 Set all characters in the region to lower case.
-.It downcase-word
+.It Ic downcase-word
 Set characters to lower case, starting at the dot, and ending
 .Va n
 words away.
-.It emacs-version
+.It Ic emacs-version
 Return an
 .Nm
 version string.
-.It end-kbd-macro
+.It Ic end-kbd-macro
 Stop defining a keyboard macro.
-.It end-of-buffer
+.It Ic end-of-buffer
 Move cursor to the end of the buffer.
 If set, keep mark's position, otherwise set at current position.
 A numeric argument
 .Va n
 will move n/10th of the way from the end.
-.It end-of-line
+.It Ic end-of-line
 Move cursor to the end of the line.
-.It enlarge-window
+.It Ic enlarge-window
 Enlarge the current window by shrinking either the window above
 or below it.
-.It eval-current-buffer
+.It Ic eval-current-buffer
 Evaluate the current buffer as a series of
 .Nm
 commands.
 Useful for testing
 .Nm
 startup files.
-.It eval-expression
+.It Ic eval-expression
 Get one line from the user, and run it.
 Useful for testing expressions in
 .Nm
 startup files.
-.It exchange-point-and-mark
+.It Ic exchange-point-and-mark
 Swap the values of "dot" and "mark" in the current window.
 Return an error if no mark is set.
-.It execute-extended-command
+.It Ic execute-extended-command
 Invoke an extended command; i.e. M-x.
 Call the message line routine to read in the command name and apply
 autocompletion to it.
 When it comes back, look the name up in the symbol table and run the
 command if it is found, passing arguments as necessary.
 Print an error if there is anything wrong.
-.It fill-paragraph
+.It Ic fill-paragraph
 Justify a paragraph, wrapping text at the current fill column.
-.It find-file
+.It Ic find-file
 Select a file for editing.
 First check if the file can be found
 in another buffer; if it is there, just switch to that buffer.
 If the file cannot be found, create a new buffer, read in the
 file from disk, and switch to the new buffer.
-.It find-file-read-only
-Same as find-file, except the new buffer is set to read-only.
-.It find-alternate-file
+.It Ic find-file-read-only
+Same as
+.Ic find-file ,
+except the new buffer is set to read-only.
+.It Ic find-alternate-file
 Replace the current file with an alternate one.
 Semantics for finding the replacement file are the same as
-find-file, except the current buffer is killed before the switch.
+.Ic find-file ,
+except the current buffer is killed before the switch.
 If the kill fails, or is aborted, revert to the original file.
-.It find-file-other-window
+.It Ic find-file-other-window
 Opens the specified file in a second buffer.
 Splits the current window if necessary.
-.It find-tag
+.It Ic find-tag
 Jump to definition of tag at dot.
-.It forward-char
+.It Ic forward-char
 Move cursor forwards (or backwards, if
 .Va n
 is negative)
 .Va n
 characters.
 Returns an error if the end of buffer is reached.
-.It forward-paragraph
+.It Ic forward-paragraph
 Move forward
 .Va n
 paragraphs.
 Paragraphs are delimited by <NL><NL> or <NL><TAB> or <NL><SPACE>.
-.It forward-word
+.It Ic forward-word
 Move the cursor forward by the specified number of words.
-.It global-set-key
+.It Ic global-set-key
 Bind a key in the global (fundamental) key map.
-.It global-unset-key
+.It Ic global-unset-key
 Unbind a key from the global (fundamental) key map; i.e. set it to 'rescan'.
-.It global-wd-mode
+.It Ic global-wd-mode
 Toggle global working-directory mode.
 When enabled,
 .Nm
-defaults to opening files (and executing commands like compile and grep)
+defaults to opening files (and executing commands like
+.Ic compile
+and
+.Ic grep )
 relative to the global working directory.
 When disabled, a working directory is set for each buffer.
-.It goto-line
+.It Ic goto-line
 Go to a specific line.
 If an argument is present, then
 it is the line number, else prompt for a line number to use.
-.It help-help
+.It Ic help-help
 Prompts for one of (a)propos, (b)indings, des(c)ribe key briefly.
-.It insert
+.It Ic insert
 Insert a string, mainly for use from macros.
-.It insert-buffer
+.It Ic insert-buffer
 Insert the contents of another buffer at dot.
-.It insert-file
+.It Ic insert-file
 Insert a file into the current buffer at dot.
-.It insert-with-wrap
+.It Ic insert-with-wrap
 Insert the bound character with word wrap.
 Check to see if we're past the fill column, and if so,
 justify this line.
-.It isearch-backward
+.It Ic isearch-backward
 Use incremental searching, initially in the reverse direction.
 isearch ignores any explicit arguments.
 If invoked during macro definition or evaluation, the non-incremental
-search-backward is invoked instead.
-.It isearch-forward
+.Ic search-backward
+is invoked instead.
+.It Ic isearch-forward
 Use incremental searching, initially in the forward direction.
 isearch ignores any explicit arguments.
 If invoked during macro definition or evaluation, the non-incremental
-search-forward is invoked instead.
-.It join-line
+.Ic search-forward
+is invoked instead.
+.It Ic join-line
 Join the current line to the previous.
 If called with an argument,
 join the next line to the current one.
-.It just-one-space
+.It Ic just-one-space
 Delete any whitespace around dot, then insert a space.
-.It keyboard-quit
+.It Ic keyboard-quit
 Abort the current action.
-.It kill-buffer
+.It Ic kill-buffer
 Dispose of a buffer, by name.
 If the buffer name does not start and end with an asterisk,
 prompt the user if the buffer
 has been changed.
-.It kill-line
+.It Ic kill-line
 Kill line.
 If called without an argument, it kills from dot to the end
 of the line, unless it is at the end of the line, when it kills the
@@ -679,139 +704,142 @@ forward over that number of newlines.
 If called with a negative argument
 it kills any text before dot on the current line, then it kills back
 abs(n) lines.
-.It kill-paragraph
+.It Ic kill-paragraph
 Delete
 .Va n
 paragraphs starting with the current one.
-.It kill-region
+.It Ic kill-region
 Kill the currently defined region.
-.It kill-word
+.It Ic kill-word
 Delete forward
 .Va n
 words.
-.It leave-tmpdir-backups
-Modifies the behaviour of backup-to-home-directory.
+.It Ic leave-tmpdir-backups
+Modifies the behaviour of
+.Ic backup-to-home-directory .
 Backup files that would normally reside in
 .Pa /tmp
 are left there and not moved to the
 .Pa ~/.mg.d
 directory.
-.It line-number-mode
+.It Ic line-number-mode
 Toggle whether the line number is displayed in the modeline.
-.It list-buffers
+.It Ic list-buffers
 Display the list of available buffers.
 The first column in the output indicates which buffer is active with a '>'
 character.
 The second column indicates which buffers are modified.
 The third column indicates which buffers are read-only.
 The remaining columns are self-explanatory.
-.It load
+.It Ic load
 Prompt the user for a filename, and then execute commands
 from that file.
-.It local-set-key
+.It Ic local-set-key
 Bind a key mapping in the local (topmost) mode.
-.It local-unset-key
+.It Ic local-unset-key
 Unbind a key mapping in the local (topmost) mode.
-.It make-backup-files
+.It Ic make-backup-files
 Toggle generation of backup files.
 Enabled by default.
-.It make-directory
+.It Ic make-directory
 Prompt the user for a path or directory name which is then created.
-.It mark-paragraph
+.It Ic mark-paragraph
 Mark
 .Va n
 paragraphs.
-.It mark-whole-buffer
+.It Ic mark-whole-buffer
 Marks whole buffer as a region by putting dot at the beginning and mark
 at the end of buffer.
-.It meta-key-mode
+.It Ic meta-key-mode
 When disabled, the meta key can be used to insert extended-ascii (8-bit)
 characters.
 When enabled, the meta key acts as usual.
-.It negative-argument
+.It Ic negative-argument
 Process a negative argument for keyboard-invoked functions.
-.It newline
+.It Ic newline
 Insert a newline into the current buffer.
-.It newline-and-indent
+.It Ic newline-and-indent
 Insert a newline, then enough tabs and spaces to duplicate the indentation
 of the previous line.
 Assumes tabs are every eight characters.
-.It next-line
+.It Ic next-line
 Move forward
 .Va n
 lines.
-.It no-tab-mode
+.It Ic no-tab-mode
 Toggle notab mode.
 In this mode, spaces are inserted rather than tabs.
-.It not-modified
+.It Ic not-modified
 Turn off the modified flag in the current buffer.
-.It open-line
+.It Ic open-line
 Open up some blank space.
 Essentially, insert
 .Va n
 newlines, then back up over them.
-.It other-window
+.It Ic other-window
 The command to make the next (down the screen) window the current
 window.
 There are no real errors, although the command does nothing if
 there is only 1 window on the screen.
-.It overwrite-mode
+.It Ic overwrite-mode
 Toggle overwrite mode in the current buffer,
 where typing overwrites existing characters rather than inserting them.
-Can be set globally with set-default-mode.
-.It prefix-region
+Can be set globally with
+.Ic set-default-mode .
+.It Ic prefix-region
 Inserts a prefix string before each line of a region.
-The prefix string is settable by using 'set-prefix-string'
+The prefix string is settable by using
+.Ic set-prefix-string
 or by invoking this command with a prefix argument.
-.It previous-line
+.It Ic previous-line
 Move backwards
 .Va n
 lines.
-.It previous-window
+.It Ic previous-window
 This command makes the previous (up the screen) window the
 current window.
 There are no errors, although the command does not do
 a lot if there is only 1 window.
-.It pop-tag-mark
+.It Ic pop-tag-mark
 Return to position where find-tag was previously invoked.
-.It push-shell
+.It Ic push-shell
 Suspend
 .Nm
 and switch to alternate screen, if available.
-.It pwd
+.It Ic pwd
 Display current (global) working directory in the status area.
-.It query-replace
+.It Ic query-replace
 Query Replace.
 Search and replace strings selectively, prompting after each match.
-.It replace-regexp
+.It Ic replace-regexp
 Replace regular expression globally without individual prompting.
-.It replace-string
+.It Ic replace-string
 Replace string globally without individual prompting.
-.It query-replace-regexp
+.It Ic query-replace-regexp
 Replace strings selectively.
 Does a search and replace operation using regular
 expressions for both patterns.
-.It quoted-insert
+.It Ic quoted-insert
 Insert the next character verbatim into the current buffer; i.e. ignore
 any function bound to that key.
-.It re-search-again
+.It Ic re-search-again
 Perform a regular expression search again, using the same search
 string and direction as the last search command.
-.It re-search-backward
+.It Ic re-search-backward
 Search backwards using a regular expression.
 Get a search string from the user, and search, starting at dot
 and proceeding toward the front of the buffer.
 If found, dot is left
 pointing at the first character of the pattern [the last character that
 was matched].
-.It re-search-forward
+.It Ic re-search-forward
 Search forward using a regular expression.
 Get a search string from the user and search for it starting at dot.
 If found, move dot to just after the matched characters.
 display does all
 the hard stuff.
 If not found, it just prints a message.
-.It recenter
+.It Ic recenter
 Reposition dot in the current window.
 By default, the dot is centered.
 If given a positive argument (n), the display is repositioned to line
@@ -819,162 +847,166 @@ n.
 If
 .Va n
 is negative, it is that line from the bottom.
-.It redraw-display
+.It Ic redraw-display
 Refresh the display.
 Recomputes all window sizes in case something has changed.
-.It revert-buffer
+.It Ic revert-buffer
 Revert the current buffer to the latest file on disk.
-.It save-buffer
+.It Ic save-buffer
 Save the contents of the current buffer if it has been changed,
 optionally creating a backup copy.
-.It save-buffers-kill-emacs
+.It Ic save-buffers-kill-emacs
 Offer to save modified buffers and quit
 .Nm .
-.It save-some-buffers
+.It Ic save-some-buffers
 Look through the list of buffers, offering to save any buffer that
 has been changed.
 Buffers that are not associated with files (such
 as *scratch*, *grep*, *compile*) are ignored.
-.It scroll-down
+.It Ic scroll-down
 Scroll backwards
 .Va n
 pages.
 A two-line overlap between pages is
 assumed.
 If given a repeat argument, scrolls back lines, not pages.
-.It scroll-one-line-down
+.It Ic scroll-one-line-down
 Scroll the display down
 .Va n
 lines without changing the cursor position.
-.It scroll-one-line-up
+.It Ic scroll-one-line-up
 Scroll the display
 .Va n
 lines up without moving the cursor position.
-.It scroll-other-window
+.It Ic scroll-other-window
 Scroll the next window in the window list window forward
 .Va n
 pages.
-.It scroll-up
+.It Ic scroll-up
 Scroll forward one page.
 A two-line overlap between pages is
 assumed.
 If given a repeat argument, scrolls back lines, not pages.
-.It search-again
+.It Ic search-again
 Search again, using the same search string and direction as the last
 search command.
-.It search-backward
+.It Ic search-backward
 Reverse search.
 Get a search string from the user, and search, starting
 at dot and proceeding toward the front of the buffer.
 If found, dot is
 left pointing at the first character of the pattern (the last character
 that was matched).
-.It search-forward
+.It Ic search-forward
 Search forward.
 Get a search string from the user, and search for it
 starting at dot.
 If found, dot gets moved to just after the matched
 characters, if not found, print a message.
-.It self-insert-command
+.It Ic self-insert-command
 Insert a character.
-.It sentence-end-double-space
+.It Ic sentence-end-double-space
 Toggle double or single spaces for end of sentences.
 Double is the default.
 Currently only affects fill-paragraph.
-.It set-case-fold-search
+.It Ic set-case-fold-search
 Set case-fold searching, causing case not to matter
 in regular expression searches.
 This is the default.
-.It set-case-replace
+.It Ic set-case-replace
 Preserve the case of the replaced string.
 This is the default.
-.It set-default-mode
+.It Ic set-default-mode
 Append the supplied mode to the list of default modes
 used by subsequent buffer creation.
 Built in modes include: fill, indent and overwrite.
-.It set-fill-column
+.It Ic set-fill-column
 Prompt the user for a fill column.
-Used by auto-fill-mode.
-.It set-mark-command
+Used by
+.Ic auto-fill-mode .
+.It Ic set-mark-command
 Sets the mark in the current window to the current dot location.
-.It set-prefix-string
-Sets the prefix string to be used by the 'prefix-region' command.
-.It set-tab-width
+.It Ic set-prefix-string
+Sets the prefix string to be used by the
+.Ic prefix-region
+command.
+.It Ic set-tab-width
 Set the tab width for the current buffer, or the default for new buffers
 if called with a prefix argument or from the startup file.
-.It shell-command
+.It Ic shell-command
 Execute external command from mini-buffer.
-.It shell-command-on-region
+.It Ic shell-command-on-region
 Provide the text in region to the shell command as input.
-.It shrink-window
+.It Ic shrink-window
 Shrink current window by one line.
 The window immediately below is expanded to pick up the slack.
 If only one window is present, this command has no effect.
-.It split-window-vertically
+.It Ic split-window-vertically
 Split the current window.
 A window smaller than 3 lines cannot be split.
-.It start-kbd-macro
+.It Ic start-kbd-macro
 Start defining a keyboard macro.
 Macro definition is ended by invoking end-kbd-macro.
-.It suspend-emacs
+.It Ic suspend-emacs
 Suspend
 .Nm
 and switch back to alternate screen, if in use.
-.It switch-to-buffer
+.It Ic switch-to-buffer
 Prompt and switch to a new buffer in the current window.
-.It switch-to-buffer-other-window
+.It Ic switch-to-buffer-other-window
 Switch to buffer in another window.
-.It toggle-read-only
+.It Ic toggle-read-only
 Toggle the read-only flag on the current buffer.
-.It toggle-read-only-all
+.It Ic toggle-read-only-all
 Toggle the read-only flag on all non-ephemeral buffers.
 A simple toggle that switches a global read-only flag either on
 or off.
-.It transpose-chars
+.It Ic transpose-chars
 Transpose the two characters in front of and under dot,
 then move forward one character.
 Treat newline characters the same as any other.
-.It transpose-paragraphs
+.It Ic transpose-paragraphs
 Transpose adjacent paragraphs.
 If multiple iterations are requested, the current paragraph will
 be moved
 .Va n
 paragraphs forward.
-.It transpose-words
+.It Ic transpose-words
 Transpose adjacent words.
-.It undo
+.It Ic undo
 Undo the most recent action.
 If invoked again without an intervening command,
 move the undo pointer to the previous action and undo it.
-.It undo-boundary
+.It Ic undo-boundary
 Add an undo boundary.
 This is not usually done interactively.
-.It undo-boundary-toggle
+.It Ic undo-boundary-toggle
 Toggle whether undo boundaries are generated.
 Undo boundaries are often disabled before operations that should
 be considered atomically undoable.
-.It undo-enable
+.It Ic undo-enable
 Toggle whether undo information is kept.
-.It undo-list
+.It Ic undo-list
 Show the undo records for the current buffer in a new buffer.
-.It universal-argument
+.It Ic universal-argument
 Repeat the next command 4 times.
 Usually bound to C-u.
 This command may be stacked; e.g.\&
 C-u C-u C-f moves the cursor forward 16 characters.
-.It upcase-region
+.It Ic upcase-region
 Upper case region.
 Change all of the lower case characters in the region to
 upper case.
-.It upcase-word
+.It Ic upcase-word
 Move the cursor forward by the specified number of words.
 As it moves, convert any characters to upper case.
-.It visible-bell
+.It Ic visible-bell
 Toggle the visible bell.
 If this toggle is on, the modeline will flash.
-.It visit-tags-table
-Load tags file to be used for subsequent find-tag.
-.It what-cursor-position
+.It Ic visit-tags-table
+Load tags file to be used for subsequent
+.Ic find-tag .
+.It Ic what-cursor-position
 Display a bunch of useful information about the current location of
 dot.
 The character under the cursor (in octal), the current line, row,
@@ -982,23 +1014,26 @@ and column, and approximate position of the cursor in the file (as a
 percentage) is displayed.
 The column position assumes an infinite
 position display; it does not truncate just because the screen does.
-.It write-file
+.It Ic write-file
 Ask for a file name and write the contents of the current buffer to
 that file.
 Update the remembered file name and clear the buffer
 changed flag.
-.It yank
-Yank text from kill-buffer.
+.It Ic yank
+Yank text from
+.Ic kill-buffer .
 Unlike emacs, the
 .Nm
 kill buffer consists only
 of the most recent kill.
 It is not a ring.
-.It zap-to-char
+.It Ic zap-to-char
 Ask for a character and delete text from the current cursor position
 until the next instance of that character, including it.
-.It zap-up-to-char
-Like zap-to-char but doesn't delete the target character.
+.It Ic zap-up-to-char
+Like
+.Ic zap-to-char
+but doesn't delete the target character.
 .El
 .Sh MG DIRED KEY BINDINGS
 Specific key bindings are available in dired mode.
@@ -1044,51 +1079,52 @@ dired-scroll-up
 .Sh MG DIRED COMMANDS
 The following are a list of the commands specific to dired mode:
 .Bl -tag -width Ds
-.It dired-create-directory
+.It Ic dired-create-directory
 Create a directory.
-.It dired-do-copy
+.It Ic dired-do-copy
 Copy the file listed on the current line of the dired buffer.
-.It dired-do-flagged-delete
+.It Ic dired-do-flagged-delete
 Delete the files that have been flagged for deletion.
-.It dired-do-rename
+.It Ic dired-do-rename
 Rename the file listed on the current line of the dired buffer.
-.It dired-find-alternate-file
+.It Ic dired-find-alternate-file
 Replace the current dired buffer with an alternate one as specified
 by the position of the cursor in the dired buffer.
-.It dired-find-file
+.It Ic dired-find-file
 Open the file on the current line of the dired buffer.
 If the cursor is on a directory, it will be opened in dired mode.
-.It dired-flag-file-deletion
+.It Ic dired-flag-file-deletion
 Flag the file listed on the current line for deletion.
 This is indicated in the buffer by putting a D at the left margin.
-No files are actually deleted until the function dired-do-flagged-delete
+No files are actually deleted until the function
+.Ic dired-do-flagged-delete
 is executed.
-.It dired-find-file-other-window
+.It Ic dired-find-file-other-window
 Open the file on the current line of the dired buffer in a
 different window.
-.It dired-goto-file
+.It Ic dired-goto-file
 Move the cursor to a file name in the dired buffer.
-.It dired-next-line
+.It Ic dired-next-line
 Move the cursor to the next line.
-.It dired-other-window
+.It Ic dired-other-window
 This function works just like dired, except that it puts the
 dired buffer in another window.
-.It dired-previous-line
+.It Ic dired-previous-line
 Move the cursor to the previous line.
-.It dired-revert
+.It Ic dired-revert
 Refresh the dired buffer while retaining any flags.
-.It dired-scroll-down
+.It Ic dired-scroll-down
 Scroll down the dired buffer.
-.It dired-scroll-up
+.It Ic dired-scroll-up
 Scroll up the dired buffer.
-.It dired-shell-command
+.It Ic dired-shell-command
 Pipe the file under the current cursor position through a shell command.
-.It dired-unmark
+.It Ic dired-unmark
 Remove the deletion flag for the file on the current line.
-.It dired-unmark-backward
+.It Ic dired-unmark-backward
 Remove the deletion flag from the file listed on the previous line
 of the dired buffer, then move up to that line.
-.It quit-window
+.It Ic quit-window
 Close the current dired buffer.
 .El
 .Sh CONFIGURATION FILES
@@ -1147,7 +1183,7 @@ in startup files.
 .Pp
 In order to use 8-bit characters (such as German umlauts), the Meta key
 needs to be disabled via the
-.Dq meta-key-mode
+.Ic meta-key-mode
 command.
 .Pp
 Multi-byte character sets, such as UTF-8, are not supported.
