--- a/share/man/man4/man4.i386/intro.4
+++ b/share/man/man4/man4.i386/intro.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: intro.4,v 1.85 2022/03/31 17:27:21 naddy Exp $
+.\"	$OpenBSD: intro.4,v 1.86 2023/05/01 06:04:46 jmc Exp $
 .\"
 .\" Copyright (c) 1983, 1986, 1991 Regents of the University of California.
 .\" All rights reserved.
@@ -27,7 +27,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: March 31 2022 $
+.Dd $Mdocdate: May 1 2023 $
 .Dt INTRO 4 i386
 .Os
 .Sh NAME
@@ -92,6 +92,8 @@ man page.
 The following buses and controllers list these devices:
 .Pp
 .Bl -tag -width "cardbus(4)XX" -offset 3n -compact
+.It Xr acpi 4
+Advanced Configuration and Power Interface
 .It Xr cardbus 4
 introduction to CardBus support
 .It Xr eisa 4
