--- a/lib/libevent/event_set_log_callback.3
+++ b/lib/libevent/event_set_log_callback.3
@@ -1,4 +1,4 @@
-.\" $OpenBSD: event_set_log_callback.3,v 1.1 2023/04/29 15:38:14 schwarze Exp $
+.\" $OpenBSD: event_set_log_callback.3,v 1.2 2023/05/01 07:04:38 jsg Exp $
 .\" Copyright (c) 2023 Ted Bullock <tbullock@comlore.com>
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
@@ -13,7 +13,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: April 29 2023 $
+.Dd $Mdocdate: May 1 2023 $
 .Dt EVENT_SET_LOG_CALLBACK 3
 .Os
 .Sh NAME
@@ -76,7 +76,7 @@ includes logic to identify the severity levels of diagnostic messages.
 .Bd -literal -offset indent
 #include <event.h>
 #include <stdio.h>
-#include <stdilib.h>
+#include <stdlib.h>
 
 void
 cb(int sev, const char *msg)
