--- a/share/man/man4/man4.armv7/intro.4
+++ b/share/man/man4/man4.armv7/intro.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: intro.4,v 1.5 2022/03/31 17:27:21 naddy Exp $
+.\" $OpenBSD: intro.4,v 1.6 2023/05/03 21:56:13 jmc Exp $
 .\"
 .\" Copyright (c) 2014 Sylvestre Gallon <syl@openbsd.org>
 .\" Copyright (c) 1983, 1986, 1991 Regents of the University of California.
@@ -28,7 +28,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: March 31 2022 $
+.Dd $Mdocdate: May 3 2023 $
 .Dt INTRO 4 armv7
 .Os
 .Sh NAME
@@ -97,6 +97,8 @@ The following buses and controllers list these devices:
 Inter IC (I2C) bus
 .It Xr omap 4
 omap3, omap4, am335x SoCs device bus
+.It Xr onewire 4
+1-Wire bus
 .It Xr pci 4
 introduction to PCI bus support
 .It Xr usb 4
