--- a/share/man/man4/man4.amd64/intro.4
+++ b/share/man/man4/man4.amd64/intro.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: intro.4,v 1.39 2023/05/01 06:04:46 jmc Exp $
+.\"	$OpenBSD: intro.4,v 1.40 2023/05/03 22:03:17 jmc Exp $
 .\"
 .\" Copyright (c) 1983, 1986, 1991 Regents of the University of California.
 .\" All rights reserved.
@@ -27,7 +27,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: May 1 2023 $
+.Dd $Mdocdate: May 3 2023 $
 .Dt INTRO 4 amd64
 .Os
 .Sh NAME
@@ -107,6 +107,8 @@ introduction to PCI bus support
 introduction to PCMCIA (PC Card) support
 .It Xr usb 4
 introduction to Universal Serial Bus support
+.It Xr virtio 4
+VirtIO support driver
 .El
 .Sh SEE ALSO
 .Xr autoconf 4 ,
