--- a/share/man/man4/man4.armv7/intro.4
+++ b/share/man/man4/man4.armv7/intro.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: intro.4,v 1.6 2023/05/03 21:56:13 jmc Exp $
+.\" $OpenBSD: intro.4,v 1.7 2023/05/03 22:03:17 jmc Exp $
 .\"
 .\" Copyright (c) 2014 Sylvestre Gallon <syl@openbsd.org>
 .\" Copyright (c) 1983, 1986, 1991 Regents of the University of California.
@@ -103,6 +103,8 @@ omap3, omap4, am335x SoCs device bus
 introduction to PCI bus support
 .It Xr usb 4
 introduction to Universal Serial Bus support
+.It Xr virtio 4
+VirtIO support driver
 .El
 .Sh SEE ALSO
 .Xr autoconf 4 ,
