--- a/share/man/man5/port-modules.5
+++ b/share/man/man5/port-modules.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: port-modules.5,v 1.262 2023/04/26 19:12:48 jmc Exp $
+.\"	$OpenBSD: port-modules.5,v 1.263 2023/05/09 13:41:54 sthen Exp $
 .\"
 .\" Copyright (c) 2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: April 26 2023 $
+.Dd $Mdocdate: May 9 2023 $
 .Dt PORT-MODULES 5
 .Os
 .Sh NAME
@@ -701,14 +701,15 @@ should be set to the name of the typeface.
 This sets
 .Ev FONTDIR
 using said typeface name.
-.Ev FONTTYPES
-defaults to `ttf' but can be set to include the extensions of
-fonts which are to be installed.
-Also sets
-.Ev FONT_DISTDIR .
 A
 .Cm do-install
-target is provided if the port tself does not provide it.
+target is provided if the port itself does not provide it.
+This installs fonts from
+.Ev FONT_DISTSUBDIR in the distribution.
+If one or more file extensions are listed in
+.Ev FONTTYPES ,
+files of those types will be used.
+Otherwise, otf files are preferred, with a fallback to ttf.
 .It fortran
 Sets
 .Ev MODFORTRAN_LIB_DEPENDS ,
