macro line fix;

--- a/share/man/man5/port-modules.5
+++ b/share/man/man5/port-modules.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: port-modules.5,v 1.263 2023/05/09 13:41:54 sthen Exp $
+.\"	$OpenBSD: port-modules.5,v 1.264 2023/05/09 19:44:06 jmc Exp $
 .\"
 .\" Copyright (c) 2008 Marc Espie
 .\"
@@ -705,7 +705,8 @@ A
 .Cm do-install
 target is provided if the port itself does not provide it.
 This installs fonts from
-.Ev FONT_DISTSUBDIR in the distribution.
+.Ev FONT_DISTSUBDIR
+in the distribution.
 If one or more file extensions are listed in
 .Ev FONTTYPES ,
 files of those types will be used.
