New udl(4) device, reported by "S V" on tech@

--- a/share/man/man4/udl.4
+++ b/share/man/man4/udl.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: udl.4,v 1.22 2023/03/31 13:48:34 jmc Exp $
+.\" $OpenBSD: udl.4,v 1.23 2023/05/10 18:28:04 miod Exp $
 .\"
 .\" Copyright (c) 2009 Marcus Glocker <mglocker@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: March 31 2023 $
+.Dd $Mdocdate: May 10 2023 $
 .Dt UDL 4
 .Os
 .Sh NAME
@@ -49,6 +49,7 @@ The following devices should work:
 .It StarTech CONV-USB2DVI
 .It Sunweit USB to DVI
 .It Unitek Y-2240 USB to DVI
+.It Toshiba Video Dock
 .It VideoHome NBdock1920
 .El
 .Sh FILES
