--- a/share/man/man4/udl.4
+++ b/share/man/man4/udl.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: udl.4,v 1.23 2023/05/10 18:28:04 miod Exp $
+.\" $OpenBSD: udl.4,v 1.24 2023/05/10 22:23:25 jmc Exp $
 .\"
 .\" Copyright (c) 2009 Marcus Glocker <mglocker@openbsd.org>
 .\"
@@ -48,8 +48,8 @@ The following devices should work:
 .It Samsung LD220
 .It StarTech CONV-USB2DVI
 .It Sunweit USB to DVI
-.It Unitek Y-2240 USB to DVI
 .It Toshiba Video Dock
+.It Unitek Y-2240 USB to DVI
 .It VideoHome NBdock1920
 .El
 .Sh FILES
