--- a/share/man/man9/uvm_init.9
+++ b/share/man/man9/uvm_init.9
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: uvm_init.9,v 1.4 2023/05/19 18:43:16 guenther Exp $
+.\"	$OpenBSD: uvm_init.9,v 1.5 2023/05/21 05:11:38 jmc Exp $
 .\"	$NetBSD: uvm.9,v 1.14 2000/06/29 06:08:44 mrg Exp $
 .\"
 .\" Copyright (c) 1998 Matthew R. Green
@@ -28,7 +28,7 @@
 .\" XXX this manual sets nS to 1 or 0 in the description, to obtain
 .\" synopsis-like function prototypes.  any better way?
 .\"
-.Dd $Mdocdate: May 19 2023 $
+.Dd $Mdocdate: May 21 2023 $
 .Dt UVM_INIT 9
 .Os
 .Sh NAME
@@ -354,11 +354,11 @@ function supports writing out the memory image of a process in a
 core file.
 It walks the address space for process
 .Fa p
-and counts of the number of segments necessary to hold the
+and counts the number of segments necessary to hold the
 dumpable memory,
-where a segment consists of one-or-more present pages followed by
-zero-or-more mapped but not present (zero-fill) pages,
-or just one-or-more mapped but not present pages.
+where a segment consists of one or more present pages followed by
+zero or more mapped but not present (zero-fill) pages,
+or just one or more mapped but not present pages.
 It then invokes
 .Fa setup
 with that segment count and the
