fix markups and reference sections properly
from Josiah Frentsos <jfrent AT tilde DOT team>
OK op@

--- a/share/man/man1/dpb.1
+++ b/share/man/man1/dpb.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dpb.1,v 1.32 2023/05/29 09:05:24 espie Exp $
+.\"	$OpenBSD: dpb.1,v 1.33 2023/05/29 21:13:24 aisha Exp $
 .\"
 .\" Copyright (c) 2010-2013 Marc Espie <espie@openbsd.org>
 .\"
@@ -66,7 +66,7 @@ for example setups).
 .Nm
 will then change its identity to different users as needed.
 See
-.Sq THE SECURITY MODEL OF DPB
+.Sx THE SECURITY MODEL OF DPB
 for details.
 .Pp
 .Nm
@@ -518,7 +518,7 @@ It will go straight to build and package instead.
 Defaults to 120 seconds.
 .It squiggles=n
 Number of squiggles on this host (see
-.Sq the squiggle heuristics
+.Sx THE SQUIGGLE HEURISTICS
 below).
 Defaults to 1 squiggle for hosts with 4 jobs or more, 0.7 for hosts with more than 1 job,
 0 for single job hosts.
