stop saying the format is "simple" there are so many annotations. "straightforward" is a better description at this point.

--- a/usr.sbin/pkg_add/pkg_create.1
+++ b/usr.sbin/pkg_add/pkg_create.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pkg_create.1,v 1.129 2023/07/04 14:00:18 espie Exp $
+.\"	$OpenBSD: pkg_create.1,v 1.130 2023/07/04 14:08:30 espie Exp $
 .\"
 .\" Documentation and design originally from FreeBSD. All the code has
 .\" been rewritten since. We keep the documentation's notice:
@@ -330,7 +330,7 @@ The
 .Dq packing-list
 format (see
 .Fl f )
-is fairly simple, being basically a list of filenames and directory names
+is fairly straightforward: basically a list of filenames and directory names
 to include in the package.
 .Pp
 Substitution of variables and inclusion of fragments is documented in the
