missed refcnt_init_trace in NAME

--- a/share/man/man9/refcnt_init.9
+++ b/share/man/man9/refcnt_init.9
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: refcnt_init.9,v 1.4 2023/07/06 20:51:31 kn Exp $
+.\"	$OpenBSD: refcnt_init.9,v 1.5 2023/07/06 20:53:53 kn Exp $
 .\"
 .\" Copyright (c) 2015 David Gwynne <dlg@openbsd.org>
 .\"
@@ -19,6 +19,7 @@
 .Os
 .Sh NAME
 .Nm refcnt_init ,
+.Nm refcnt_init_trace ,
 .Nm refcnt_take ,
 .Nm refcnt_rele ,
 .Nm refcnt_rele_wake ,
