correct spelling confirmed by Vladimir

--- a/share/man/man4/ietp.4
+++ b/share/man/man4/ietp.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ietp.4,v 1.1 2023/07/08 02:43:02 jcs Exp $
+.\"	$OpenBSD: ietp.4,v 1.2 2023/07/09 01:12:04 jsg Exp $
 .\"
 .\" Copyright (c) 2016 joshua stein <jcs@openbsd.org>
 .\" Copyright (c) 2023 vladimir serbinenko <phcoder@gmail.com>
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: July 8 2023 $
+.Dd $Mdocdate: July 9 2023 $
 .Dt IETP 4
 .Os
 .Sh NAME
@@ -44,4 +44,4 @@ device driver first appeared in
 The
 .Nm
 driver was written by
-.An vladimir serbineko Aq Mt phcoder@gmail.com .
+.An Vladimir Serbinenko Aq Mt phcoder@gmail.com .
