revert previous: dlg tells me it's incorrect

--- a/share/man/man4/eoip.4
+++ b/share/man/man4/eoip.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: eoip.4,v 1.7 2023/07/26 05:56:48 jmc Exp $
+.\" $OpenBSD: eoip.4,v 1.8 2023/07/26 20:23:22 jmc Exp $
 .\" $NetBSD: gre.4,v 1.10 1999/12/22 14:55:49 kleink Exp $
 .\"
 .\" Copyright 1998 (c) The NetBSD Foundation, Inc.
@@ -35,7 +35,7 @@
 .Nm eoip
 .Nd MikroTik Ethernet over IP tunnel network device
 .Sh SYNOPSIS
-.Cd "pseudo-device eoip"
+.Cd "pseudo-device gre"
 .Sh DESCRIPTION
 The
 .Nm
